[package]
name = "timemark"
version = "0.1.0"
authors = ["Brian Martin <brayniac@gmail.com>"]

license = "MIT OR Apache-2.0"

description = "useless time tests"

homepage = "https://github.com/brayniac/timemark"
repository = "https://github.com/brayniac/timemark"

[dependencies]
allan = "0.2.1"
log = "0.3.6"
pad = "0.1.4"
time = "0.1.35"

[profile.dev]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
amd = []